# scripts

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  to_be_commited  tsconfig.json
data/: all_tx.json  categories_277  cleaned  domains  sample
data/chroma.db/: chroma.sqlite3
data/output/: .test_for_backend.stats_kdomain-v.762k.json.progress  categories.json  categories_legacy  domain_list  domain_list_v2  normalized_domains.json
mizuscripts/: cli.py  domain_parser.py  embedder.py  mongo.py  s3.py  types.py
repo-uploader/src/: address.ts  client.ts  config.ts  contract.ts  create-repo.ts  createrepo.ts  index.ts  testTx.ts
repo-uploader/src/utils/: kms.ts  repo.ts
src/: check-infer-cache.ts  gen_category.ts  init-metadata-to-mongodb-1444.ts  normalize-domain.ts
src/create-repo/: address.ts  client.ts  commit.ts  config.ts  contract.ts  create-repo-tx.ts  create-repo.ts  host.ts  set-metadata.ts
src/create-repo/utils/: client.ts  config.ts  contract.ts  predictAddress.ts  types.ts
